# buddy-allocator

./: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
src/: address_space.rs  allocator.rs  buddys.rs  lib.rs  raw.rs
